agrego scss de tablet

--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="estilos/style.css">
-
     <title>shinee world ☆ contacto</title>
 </head>
 
@@ -31,8 +30,8 @@
         <div class="hamburguesa">
 
             <div class="collapse" id="navbarToggleExternalContent">
-                <div class="bg-dark p-4">
-                    <h5 class="text-white h4">menu</h5>
+                <div class="bg-teal p-4">
+                    <p class="menu">menu</p>
                     <span class="text-muted">
                         <nav>
                             <ul>
@@ -45,7 +44,7 @@
                     </nav></span>
                 </div>
             </div>
-            <nav class="navbar navbar-dark bg-dark">
+            <nav class="navbar navbar-dark bg-teal">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
@@ -113,20 +112,20 @@
             <div class="contenedor">
                 <form action="action" class="form">
                     <div class="form-header">
-                        <h2 class="form-title">ingresa tus datos y participa!</h2>
+                        <h2 class="form-title">¡Ingresa tus datos y participa!</h2>
                     </div>
 
-                    <label for="nombre" class="form-control-label">nombre:</label>
-                    <input type="text" class="form-input" placeholder="Escriba su nombre" id="nombre">
+                    <label for="nombre" class="form-control-label">Nombre:</label>
+                    <input type="text" class="form-input" placeholder="escriba su nombre" id="nombre">
 
-                    <label for="Apellido" class="form-control-label">apellido:</label>
-                    <input type="text" class="form-input" placeholder="Escriba su Apellido" id="Apellido">
+                    <label for="Apellido" class="form-control-label">Apellido:</label>
+                    <input type="text" class="form-input" placeholder="escriba su Apellido" id="Apellido">
 
-                    <label for="date" class="form-control-label">ingresa tu fecha de cumpleaños para recibir un
+                    <label for="date" class="form-control-label">Ingresa tu fecha de cumpleaños para recibir un
                         regalo!</label>
                     <input type="date" class="form-input" id="date">
 
-                    <label for="email" class="form-control-label">mail:</label>
+                    <label for="email" class="form-control-label">Mail:</label>
                     <input type="text" class="form-input" placeholder="escriba su mail" id="email">
 
                     <input type="submit" class="btn-submit" value="enviar formulario">
@@ -152,7 +151,7 @@
 
     <footer>
 
-        <p>todos los derechos reservados</p>
+        <p>Todos los derechos reservados</p>
 
         <a href="https://es-la.facebook.com/shinee">
             <img src="https://img.icons8.com/ios/50/FFFFFF/facebook-f.png" />
@@ -166,7 +165,7 @@
             <img src="https://img.icons8.com/sf-regular-filled/48/FFFFFF/instagram-new.png" />
         </a>
 
-        <p>seguinos en nuestras redes!</p>
+        <p>¡Seguinos en nuestras redes!</p>
 
     </footer>
 
