--- a/shinee.html
+++ b/shinee.html
@@ -30,8 +30,8 @@
         <div class="hamburguesa">
 
             <div class="collapse" id="navbarToggleExternalContent">
-                <div class="bg-dark p-4">
-                    <h5 class="text-white h4">menu</h5>
+                <div class="bg-teal p-4">
+                    <p class="menu">menu</p>
                     <span class="text-muted">
                         <nav>
                             <ul>
@@ -44,7 +44,7 @@
                     </nav></span>
                 </div>
             </div>
-            <nav class="navbar navbar-dark bg-dark">
+            <nav class="navbar navbar-dark bg-teal">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
@@ -407,7 +407,7 @@
             <img src="https://img.icons8.com/sf-regular-filled/48/FFFFFF/instagram-new.png" />
         </a>
 
-        <p>seguinos en nuestras redes!</p>
+        <p>¡Seguinos en nuestras redes!</p>
 
     </footer>
 
