--- a/galeria.html
+++ b/galeria.html
@@ -35,8 +35,8 @@
         <div class="hamburguesa">
 
             <div class="collapse" id="navbarToggleExternalContent">
-                <div class="bg-dark p-4">
-                    <h5 class="text-white h4">menu</h5>
+                <div class="bg-teal p-4">
+                    <p class="menu">menu</p>
                     <span class="text-muted">
                         <nav>
                             <ul>
@@ -49,7 +49,7 @@
                     </nav></span>
                 </div>
             </div>
-            <nav class="navbar navbar-dark bg-dark">
+            <nav class="navbar navbar-dark bg-teal">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
@@ -100,7 +100,7 @@
         <section class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <p>Te mostramos las imagenes ineditas de todos los photoshoot de SHINee, desde sus comienzos hasta el lanzamiento mas reciente!</p>
+                    <p>Te mostramos las imagenes ineditas de todos los photoshoot de SHINee, ¡Desde sus comienzos hasta el lanzamiento mas reciente!</p>
                 </div>
 
 
@@ -159,7 +159,7 @@
             <img src="https://img.icons8.com/sf-regular-filled/48/FFFFFF/instagram-new.png" />
         </a>
 
-        <p>seguinos en nuestras redes!</p>
+        <p>¡Seguinos en nuestras redes!</p>
 
     </footer>
 
