--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <div class="hamburguesa">
 
                     <div class="collapse" id="navbarToggleExternalContent">
-                        <div class="color bg-dark p-4">
-                            <h5 class="text-white h4">menu</h5>
+                        <div class="color bg-teal p-4">
+                            <p class="menu">menu</p>
                             <span class="text-muted">
                                 <nav>
                                     <ul>
@@ -52,7 +52,7 @@
                             </span>
                         </div>
                     </div>
-                    <nav class="color navbar navbar-dark bg-dark">
+                    <nav class="color navbar navbar-dark bg-teal">
                         <div class="container-fluid">
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarToggleExternalContent"
@@ -160,7 +160,7 @@
             <img src="https://img.icons8.com/sf-regular-filled/48/FFFFFF/instagram-new.png" />
         </a>
 
-        <p>seguinos en nuestras redes!</p>
+        <p>¡Seguinos en nuestras redes!</p>
 
     </footer>
 
