--- a/integrantes.html
+++ b/integrantes.html
@@ -40,7 +40,8 @@
                                 <li><a href="contacto.html"> contacto </a>
                                 <li><a href="galeria.html"> galeria </a>
                             </ul>
-                    </nav></span>
+                        </nav>
+                    </span>
                 </div>
             </div>
             <nav class="navbar navbar-dark bg-teal">
@@ -52,10 +53,10 @@
                     </button>
                 </div>
             </nav>
-</div>
+        </div>
 
 
-<div class="navescritorio">
+        <div class="navescritorio">
             <nav>
                 <ul>
                     <li><a href="index.html"> home </a></li>
@@ -65,32 +66,32 @@
                     <li><a href="galeria.html"> galeria </a>
                 </ul>
             </nav>
-</div>
+        </div>
 
 
 
     </header>
 
 
-    
+
     <div class="bannerintegrantes">
 
         <div class="contenedor">
             <img src="imagenes/shinee/fondo.jpg" alt="foto grupal shinee banner" />
         </div>
 
-        <div class="cajaintegrantes">
 
-            <h1 class="h1integrantes">integrantes</h1>
+            <h1>integrantes</h1>
 
 
-        </div>
 
     </div>
 
+
+
     <main>
 
-        <div id="onew">
+        <section>
             <h2>lee jinki</h2>
             <p> <strong>Lee Jinki, más conocido como Onew nació el 14 de dicibre de 1989 en Gwangmyeong</strong> ,
                 Provincia de Gyeonggi en
@@ -112,11 +113,38 @@
                     Actualmente ya terminó
                     su servicio por lo que sus actividades están en proceso.</strong>
             </p>
-        </div>
+
+            <div class="card-group">
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/onew/1.jpeg" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DEBUT</h3>
+                        <p class="card-text">Foto debut de Replay</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/onew/2.jpeg" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DEBUT SOLISTA</h3>
+                        <p class="card-text">Debut de VOICE.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/onew/3.jpeg" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DON'T CALL ME</h3>
+                        <p class="card-text">Ultimo comeback de SHINee, foto individual de Onew.</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
 
 
-        <div id="jonghyun">
+
+
+        <section>
             <h2>kim jonghyun</h2>
 
 
@@ -152,10 +180,38 @@
                     Jonghyun llevó a cabo en su nombre con la idea de ayudar a jóvenes en su carrera artística tanto
                     como él hubiera
                     querido seguir en vida.</strong></p>
-        </div>
+
+            <div class="card-group">
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/jonghyun/1.png" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DEBUT</h3>
+                        <p class="card-text">Foto debut de Replay</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/jonghyun/2.jpeg" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DEBUT SOLISTA</h3>
+                        <p class="card-text">Debut de VOICE.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/jonghyun/3.jpeg" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DON'T CALL ME</h3>
+                        <p class="card-text">Ultimo comeback de SHINee, foto individual de Onew.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
-        <div id="key">
+
+
+
+
+        <section>
             <h2>kim kibum</h2>
             <p><strong> Kim Kibum, mejor conocido como Key nació el 23 Septibre de 1991 en Daegu</strong>, Corea del
                 Sur, <strong>es el vocalista y
@@ -173,38 +229,97 @@
             <p><strong>En 2019 realizó y finalizó el servicio militar un año más tarde por lo que tuvo que darle una
                     pausa a sus
                     actividades.</strong></p>
-        </div>
 
-        <div id="minho">
-            <h2>choi minho</h2>
-            <p><strong>Choi Minho nació el 9 de dicibre de 1991 en la provincia de Incheon</strong>, Corea del Sur y
-                <strong>adás de ser el
-                    rapero principal del grupo es MC, actor y modelo de reconocido prestigio.</strong> <br />
-                A diferencia del resto de los integrantes,<strong> Minho viene de una familia reconocida, su padre
-                    es un
-                    ex-futbolista y entrenador de la liga K Daejun de fútbol por lo que la fama ya era algo
-                    cotidiano para él.</strong> Adás de
-                prestarse como modelo en determinados desfiles desde los 15 años.
-            </p>
-            <p>Minho destaca por su increíble capacidad física para distintos deportes, un gran ejplo de esto son
-                los
-                “Idol Star Athletic Championship”, actividades que se realizan todos los años en el mundo del kpop
-                parecidas a los
-                Juegos Olímpicos.
-            </p>
-            <p><strong>También desde ya unos años que se dedica en exclusiva a la actuación</strong>, haciendo
-                apariciones en numerosas
-                películas y dramas, como son “Hwarang: The Poet Warrior Youth”, “The Battle of Jangsari”y “The
-                Fabulous”. <br />
-                <strong>Debutó como solista el 28 de marzo de 2019 con una canción llamada "I’m Home”</strong> el
-                cual es un ta R&B habla
-                sobre querer ser animado en la soledad del día a día. <br />
-                <strong>En 2019 realizó y finalizó el servicio militar un año más tarde destacando en el cuerpo de
-                    marina.</strong>
-            </p>
-        </div>
+            <div class="card-group">
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/key/1.jpeg" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DEBUT</h3>
+                        <p class="card-text">Foto debut de Replay</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/key/2.jpeg" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DEBUT SOLISTA</h3>
+                        <p class="card-text">Debut de VOICE.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/key/3.jpeg" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DON'T CALL ME</h3>
+                        <p class="card-text">Ultimo comeback de SHINee, foto individual de Onew.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div id="taemin">
+
+
+
+
+        <section>
+            <div id="minho">
+                <h2>choi minho</h2>
+                <p><strong>Choi Minho nació el 9 de dicibre de 1991 en la provincia de Incheon</strong>, Corea del Sur y
+                    <strong>adás de ser el
+                        rapero principal del grupo es MC, actor y modelo de reconocido prestigio.</strong> <br />
+                    A diferencia del resto de los integrantes,<strong> Minho viene de una familia reconocida, su padre
+                        es un
+                        ex-futbolista y entrenador de la liga K Daejun de fútbol por lo que la fama ya era algo
+                        cotidiano para él.</strong> Adás de
+                    prestarse como modelo en determinados desfiles desde los 15 años.
+                </p>
+                <p>Minho destaca por su increíble capacidad física para distintos deportes, un gran ejplo de esto son
+                    los
+                    “Idol Star Athletic Championship”, actividades que se realizan todos los años en el mundo del kpop
+                    parecidas a los
+                    Juegos Olímpicos.
+                </p>
+                <p><strong>También desde ya unos años que se dedica en exclusiva a la actuación</strong>, haciendo
+                    apariciones en numerosas
+                    películas y dramas, como son “Hwarang: The Poet Warrior Youth”, “The Battle of Jangsari”y “The
+                    Fabulous”. <br />
+                    <strong>Debutó como solista el 28 de marzo de 2019 con una canción llamada "I’m Home”</strong> el
+                    cual es un ta R&B habla
+                    sobre querer ser animado en la soledad del día a día. <br />
+                    <strong>En 2019 realizó y finalizó el servicio militar un año más tarde destacando en el cuerpo de
+                        marina.</strong>
+
+                </p>
+
+                <div class="card-group">
+                    <div class="card">
+                        <img class="card-img-top" src="imagenes/galeria/minho/1.jpeg" alt="Card image cap">
+                        <div class="card-block">
+                            <h3 class="card-title">DEBUT</h3>
+                            <p class="card-text">Foto debut de Replay</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="imagenes/galeria/minho/2.jpeg" alt="Card image cap">
+                        <div class="card-block">
+                            <h3 class="card-title">DEBUT SOLISTA</h3>
+                            <p class="card-text">Debut de VOICE.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="imagenes/galeria/minho/3.jpeg" alt="Card image cap">
+                        <div class="card-block">
+                            <h3 class="card-title">DON'T CALL ME</h3>
+                            <p class="card-text">Ultimo comeback de SHINee, foto individual de Onew.</p>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+
+
+
+
+
+        <section>
             <h2>lee taemin</h2>
 
 
@@ -230,17 +345,45 @@
                     espera su regreso sea
                     en 2024.</strong>
             </p>
-        </div>
+
+            <div class="card-group">
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/taemin/1.webp" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DEBUT</h3>
+                        <p class="card-text">Foto debut de Replay</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/taemin/2.jpeg" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DEBUT SOLISTA</h3>
+                        <p class="card-text">Debut de VOICE.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="imagenes/galeria/taemin/3.jpeg" alt="Card image cap">
+                    <div class="card-block">
+                        <h3 class="card-title">DON'T CALL ME</h3>
+                        <p class="card-text">Ultimo comeback de SHINee, foto individual de Onew.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
-</div>
-<a href="#home" class="boton"> </a>
 
-</div>
+
+    </div>
+    <a href="#home" class="boton"> </a>
+    </div>
+
+
 
 
     <footer>
+    
 
         <p>todos los derechos reservados</p>
 
@@ -263,7 +406,9 @@
     </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 
 
