--- a/shinee.html
+++ b/shinee.html
@@ -81,11 +81,8 @@
             <img src="imagenes/shinee/shinee.jpg" alt="Foto banner grupal shinee" />
 
 
-            <div class="cajainfoshinee">
 
-                <h1 class="h1infoshinee">discografia</h1>
-
-            </div>
+<h1>discografia</h1>
         </div>
 
     </div>
@@ -110,6 +107,10 @@
                 Álbum Repackaged que se liberó el 29 de octubre llamado "AMIGO".</strong>
         </p>
 
+<div class="fotosdiscografia">
+    <img src="imagenes/galeria/discografia/1.webp" alt="">
+</div>
+        
         <h2>2009</h2>
         <p>
             <strong>"Romeo" fue lanzado el 25 de mayo y consta de seis pistas, incluida la canción principal
@@ -190,6 +191,9 @@
             sencillos anteriores hayan sido rakes de sus canciones coreanas.
         </p>
 
+        <div class="fotosdiscografia">
+            <img src="imagenes/galeria/discografia/2.png" alt="">
+        </div>
 
         <h2>2013</h2>
 
@@ -277,6 +281,10 @@
             canción principal y "Good Good Feeling" siendo el b-side.
         </p>
 
+        <div class="fotosdiscografia">
+            <img src="imagenes/galeria/discografia/3.jpeg" alt="">
+        </div>
+
         <h2>2016</h2>
 
         <p>
@@ -355,6 +363,10 @@
         </p>
 
 
+        <div class="fotosdiscografia">
+            <img src="imagenes/galeria/discografia/4.png" alt="">
+        </div>
+
         <h2>2021</h2>
         <p>
             El 1 de febrero, se anunció a través de la cuenta de Twitter del <strong>grupo que realizarían su
@@ -381,6 +393,12 @@
             incluidas
             portadas individuales de los mibros y una versión regular.
         </p>
+
+        <div class="fotosdiscografia">
+            <img src="imagenes/galeria/discografia/5.webp" alt="">
+        </div>
+
+
     </main>
 
 
