--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>shinee world ☆ contacto</title>
 </head>
 
@@ -26,7 +26,7 @@
 
 
         <a name="home" id="home"></a>
-        
+
         <div class="hamburguesa">
 
             <div class="collapse" id="navbarToggleExternalContent">
@@ -41,7 +41,8 @@
                                 <li><a href="contacto.html"> contacto </a>
                                 <li><a href="galeria.html"> galeria </a>
                             </ul>
-                    </nav></span>
+                        </nav>
+                    </span>
                 </div>
             </div>
             <nav class="navbar navbar-dark bg-teal">
@@ -53,10 +54,10 @@
                     </button>
                 </div>
             </nav>
-</div>
+        </div>
 
 
-<div class="navescritorio">
+        <div class="navescritorio">
             <nav>
                 <ul>
 
@@ -68,7 +69,7 @@
 
                 </ul>
             </nav>
-</div>
+        </div>
 
 
 
@@ -81,18 +82,14 @@
             <img src="imagenes/shinee/concurso.jpg" alt="Foro grupal de SHINee videoclip de View" />
         </div>
 
-        <div class="cajaconcurso">
+        <h1>registrate y gana</h1>
 
-            <h1 class="h1concurso">registrate y gana</h1>
-
-
-        </div>
 
     </div>
 
-    <div class="infocontacto">
+    <section class="infocontacto">
 
-        <div id="textocontacto">
+        <article>
             <p>¿Queres merchandising original de grupo? <strong> Constantente sorteamos y hacos rifas de todo el
                     contenido
                     exclusivo de SHINee</strong> que puedas imaginar, si vos también queres no dudes en hacer llegar el
@@ -101,9 +98,7 @@
                 Actualmente <strong> estamos sorteando el cuarto álbum de estudio “ODD” versión A con las photocards y
                     el
                     póster grupal incluido.</strong></p>
-
-        </div>
-
+        </article>
 
 
 
@@ -135,19 +130,12 @@
             </div>
         </main>
 
+    </section>
 
-
-
-
-    </div>
     <a href="#home" class="boton"> </a>
 
-    </div>
 
 
-
-
-    </div>
 
     <footer>
 
@@ -171,7 +159,9 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 
 
