ultimos arreglos en los alt

--- a/galeria.html
+++ b/galeria.html
@@ -82,7 +82,7 @@
     <div class="bannergaleria">
 
         <div class="contenedor">
-            <img src="imagenes/shinee/galeria.jpg" alt="Foro grupal de SHINee banner" />
+            <img src="imagenes/shinee/galeria.jpg" alt="Foto grupal de SHINee banner" />
         </div>
 
 
@@ -105,16 +105,25 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="imagenes/galeria/1.jpg" class="d-block w-100" alt="foto grupal de shinee de 2009">
+                        <img src="imagenes/galeria/1.jpg" class="d-block w-100" alt="Foto grupal de shinee de 2009.">
                     </div>
                     <div class="carousel-item">
-                        <img src="imagenes/galeria/2.jpg" class="d-block w-100" alt="foto grupal de shinee era twtd">
+                        <img src="imagenes/galeria/2.jpg" class="d-block w-100" alt="Foto grupal de shinee era twtd.">
                     </div>
                     <div class="carousel-item">
-                        <img src="imagenes/galeria/3.jpg" class="d-block w-100" alt="foto grupal shinee 1of1 era">
+                        <img src="imagenes/galeria/3.jpg" class="d-block w-100" alt="Foto grupal shinee 1of1 era.">
                     </div>
                     <div class="carousel-item">
-                        <img src="imagenes/galeria/4.jpg" class="d-block w-100" alt="foto grupal de shinee 1of1 era">
+                        <img src="imagenes/galeria/4.jpg" class="d-block w-100" alt="Foto grupal de shinee 1of1 era.">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/galeria/5.jpeg" class="d-block w-100" alt="Foto grupal de shinee en una cena.">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/galeria/6.jpeg" class="d-block w-100" alt="Foto grupal de shinee en el programa hello baby.">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/galeria/7.jpeg" class="d-block w-100" alt="Foto grupal de shinee en la fiesta especial de halloween de la empresa sm.">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
