--- a/integrantes.html
+++ b/integrantes.html
@@ -116,21 +116,21 @@
 
             <div class="card-group">
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/onew/1.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/onew/1.jpeg" alt="Foto Onew de SHINee sonriendo en la epoca de Replay.">
                     <div class="card-block">
                         <h3 class="card-title">DEBUT</h3>
                         <p class="card-text">Foto debut de Replay</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/onew/2.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/onew/2.jpeg" alt="Foto de Onew de su album solista Voice.">
                     <div class="card-block">
                         <h3 class="card-title">DEBUT SOLISTA</h3>
                         <p class="card-text">Debut de VOICE.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/onew/3.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/onew/3.jpeg" alt="Foto solista de Onew del video de Don't Call Me de SHINee.">
                     <div class="card-block">
                         <h3 class="card-title">DON'T CALL ME</h3>
                         <p class="card-text">Ultimo comeback de SHINee, foto individual de Onew.</p>
@@ -183,24 +183,26 @@
 
             <div class="card-group">
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/jonghyun/1.png" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/jonghyun/1.png" alt="Foto debut de Jonghyun de SHINee en el escenario.">
                     <div class="card-block">
                         <h3 class="card-title">DEBUT</h3>
-                        <p class="card-text">Foto debut de Replay</p>
+                        <p class="card-text">Foto debut de Replay.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/jonghyun/2.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/jonghyun/2.jpeg" alt="Foto de Jonghyun de su presentacion debut en vivo de Base.">
                     <div class="card-block">
                         <h3 class="card-title">DEBUT SOLISTA</h3>
-                        <p class="card-text">Debut de VOICE.</p>
+                        <p class="card-text">Debut de BASE.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/jonghyun/3.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/jonghyun/3.jpeg" alt="Foto de Jonghyun del album “Poet |
+                    Artist">
                     <div class="card-block">
                         <h3 class="card-title">DON'T CALL ME</h3>
-                        <p class="card-text">Ultimo comeback de SHINee, foto individual de Onew.</p>
+                        <p class="card-text">Ultimo comeback de Jonghyun como solista Poet |
+                            Artist.</p>
                     </div>
                 </div>
             </div>
@@ -232,24 +234,24 @@
 
             <div class="card-group">
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/key/1.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/key/1.jpeg" alt="Foto de Key de SHINee de su debut.">
                     <div class="card-block">
                         <h3 class="card-title">DEBUT</h3>
-                        <p class="card-text">Foto debut de Replay</p>
+                        <p class="card-text">Foto debut de Replay.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/key/2.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/key/2.jpeg" alt="Foto de Key de SHINee en su album como solista">
                     <div class="card-block">
                         <h3 class="card-title">DEBUT SOLISTA</h3>
-                        <p class="card-text">Debut de VOICE.</p>
+                        <p class="card-text">Debut de Face.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/key/3.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/key/3.jpeg" alt="Foto de Key de SHINee en la presentacion grupal en vivo de Don't Call Me">
                     <div class="card-block">
                         <h3 class="card-title">DON'T CALL ME</h3>
-                        <p class="card-text">Ultimo comeback de SHINee, foto individual de Onew.</p>
+                        <p class="card-text">Ultimo comeback de SHINee, foto individual de Key.</p>
                     </div>
                 </div>
             </div>
@@ -291,24 +293,24 @@
 
                 <div class="card-group">
                     <div class="card">
-                        <img class="card-img-top" src="imagenes/galeria/minho/1.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="imagenes/galeria/minho/1.jpeg" alt="Foto de Minho de SHINee en su debut grupal">
                         <div class="card-block">
                             <h3 class="card-title">DEBUT</h3>
                             <p class="card-text">Foto debut de Replay</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="imagenes/galeria/minho/2.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="imagenes/galeria/minho/2.jpeg" alt="Foto de Minho vestido en ropas tradicionales coreanas.">
                         <div class="card-block">
-                            <h3 class="card-title">DEBUT SOLISTA</h3>
-                            <p class="card-text">Debut de VOICE.</p>
+                            <h3 class="card-title">ACTOR</h3>
+                            <p class="card-text">Papel importante en el KDrama "Hwarang: The Poet Warrior Youth”.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="imagenes/galeria/minho/3.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="imagenes/galeria/minho/3.jpeg" alt="Foto de Minho en el album de SHINee Don't Call Me.">
                         <div class="card-block">
                             <h3 class="card-title">DON'T CALL ME</h3>
-                            <p class="card-text">Ultimo comeback de SHINee, foto individual de Onew.</p>
+                            <p class="card-text">Ultimo comeback de SHINee, foto individual de Minho.</p>
                         </div>
                     </div>
                 </div>
@@ -348,24 +350,24 @@
 
             <div class="card-group">
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/taemin/1.webp" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/taemin/1.webp" alt="Foto individual de Taemin en su debut con SHINee">
                     <div class="card-block">
                         <h3 class="card-title">DEBUT</h3>
                         <p class="card-text">Foto debut de Replay</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/taemin/2.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/taemin/2.jpeg" alt="Foto de Taemin en el escenario en su debut como solista en Danger.">
                     <div class="card-block">
                         <h3 class="card-title">DEBUT SOLISTA</h3>
-                        <p class="card-text">Debut de VOICE.</p>
+                        <p class="card-text">Debut de Danger</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="imagenes/galeria/taemin/3.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="imagenes/galeria/taemin/3.jpeg" alt="Foto inidvidual de Taemin en su ultimo comeback grupal con SHINee">
                     <div class="card-block">
                         <h3 class="card-title">DON'T CALL ME</h3>
-                        <p class="card-text">Ultimo comeback de SHINee, foto individual de Onew.</p>
+                        <p class="card-text">Ultimo comeback de SHINee, foto individual de Taemin.</p>
                     </div>
                 </div>
             </div>
