--- a/shinee.html
+++ b/shinee.html
@@ -108,7 +108,7 @@
         </p>
 
 <div class="fotosdiscografia">
-    <img src="imagenes/galeria/discografia/1.webp" alt="">
+    <img src="imagenes/galeria/discografia/1.webp" alt="Foto grupal de SHINee abrazados en un estudio de fotografia.">
 </div>
         
         <h2>2009</h2>
@@ -192,7 +192,8 @@
         </p>
 
         <div class="fotosdiscografia">
-            <img src="imagenes/galeria/discografia/2.png" alt="">
+            <img src="imagenes/galeria/discografia/2.png" alt="Foto grupal de SHINee para el photoshoot del album Sherlock (Clue +
+            Note)">
         </div>
 
         <h2>2013</h2>
@@ -282,7 +283,7 @@
         </p>
 
         <div class="fotosdiscografia">
-            <img src="imagenes/galeria/discografia/3.jpeg" alt="">
+            <img src="imagenes/galeria/discografia/3.jpeg" alt="Foto de SHINee en el escenario en un concierto de la gira de The SHINee World en Buenos Aires.">
         </div>
 
         <h2>2016</h2>
@@ -364,7 +365,7 @@
 
 
         <div class="fotosdiscografia">
-            <img src="imagenes/galeria/discografia/4.png" alt="">
+            <img src="imagenes/galeria/discografia/4.png" alt="Foto extraida del videoclip Our Page de SHINee.">
         </div>
 
         <h2>2021</h2>
@@ -395,7 +396,7 @@
         </p>
 
         <div class="fotosdiscografia">
-            <img src="imagenes/galeria/discografia/5.webp" alt="">
+            <img src="imagenes/galeria/discografia/5.webp" alt="Foto grupal de SHINee del Photoshoot de Don't Call Me">
         </div>
 
 
